@@ -416,10 +416,11 @@ class GeoDir_Media {
 		}
 
 		// Clear the post attachment cache
-		$cache_key = 'gd_attachments_by_type:' . $post_id . ':' . $type . ':::' . $other_id;
-		wp_cache_delete( $cache_key, 'gd_attachments_by_type' );
+		wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $type . ':::' . $other_id . ':', 'gd_attachments_by_type' );
+		wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $type . ':::' . $other_id . ':1', 'gd_attachments_by_type' );
 		if ( ! $other_id ) {
-			wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $type . ':1::', 'gd_attachments_by_type' );
+			wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $type . ':1:::', 'gd_attachments_by_type' );
+			wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $type . ':1:::1', 'gd_attachments_by_type' );
 		}
 
 		$file_info['ID'] = $wpdb->insert_id;
@@ -592,10 +593,11 @@ class GeoDir_Media {
 		}
 
 		// Clear the post attachment cache
-		$cache_key = 'gd_attachments_by_type:' . $post_id . ':' . $field . ':::' . $other_id;
-		wp_cache_delete( $cache_key, 'gd_attachments_by_type' );
+		wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $field . ':::' . $other_id . ':', 'gd_attachments_by_type' );
+		wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $field . ':::' . $other_id . ':1', 'gd_attachments_by_type' );
 		if ( ! $other_id ) {
-			wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $field . ':1::', 'gd_attachments_by_type' );
+			wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $field . ':1:::', 'gd_attachments_by_type' );
+			wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $field . ':1:::1', 'gd_attachments_by_type' );
 		}
 
 		// Attachment info.
@@ -812,8 +814,10 @@ class GeoDir_Media {
 				}
 
 				// Clear post attachment cache.
-				wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $attachment->type . ':::', 'gd_attachments_by_type' );
-				wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $attachment->type . ':1::', 'gd_attachments_by_type' );
+				wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $attachment->type . '::::', 'gd_attachments_by_type' );
+				wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $attachment->type . ':1:::', 'gd_attachments_by_type' );
+				wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $attachment->type . '::::1', 'gd_attachments_by_type' );
+				wp_cache_delete( 'gd_attachments_by_type:' . $post_id . ':' . $attachment->type . ':1:::1', 'gd_attachments_by_type' );
 			}
 		}
 
@@ -1074,8 +1078,10 @@ class GeoDir_Media {
 
 						if ( ! empty( $file->type ) ) {
 							// Clear post attachment cache.
-							wp_cache_delete( 'gd_attachments_by_type:' . $file->post_id . ':' . $file->type . ':::', 'gd_attachments_by_type' );
-							wp_cache_delete( 'gd_attachments_by_type:' . $file->post_id . ':' . $file->type . ':1::', 'gd_attachments_by_type' );
+							wp_cache_delete( 'gd_attachments_by_type:' . $file->post_id . ':' . $file->type . '::::', 'gd_attachments_by_type' );
+							wp_cache_delete( 'gd_attachments_by_type:' . $file->post_id . ':' . $file->type . ':1:::', 'gd_attachments_by_type' );
+							wp_cache_delete( 'gd_attachments_by_type:' . $file->post_id . ':' . $file->type . '::::1', 'gd_attachments_by_type' );
+							wp_cache_delete( 'gd_attachments_by_type:' . $file->post_id . ':' . $file->type . ':1:::', 'gd_attachments_by_type' );
 						}
 					}else{
 						self::delete_attachment($file->ID,$file->post_id, $file);
